--- a/source/sass/_header.scss
+++ b/source/sass/_header.scss
@@ -3,6 +3,7 @@
   margin-bottom: 94px;
   background: url('../img/header-photo.png') no-repeat #000;
   background-size: cover;
+  background-position: center center;
 
   &__container {
     display: flex;
@@ -39,7 +40,8 @@
   }
 
   &__text {
-    width: 60%;
+    width: 100%;
+    max-width: 565px;
     margin-bottom: 98px;
   }
 
