--- a/source/sass/_work.scss
+++ b/source/sass/_work.scss
@@ -13,17 +13,23 @@
 
   &__article {
     position: relative;
+    width: 100%;
     max-width: 300px;
     height: 400px;
+    border-radius: 4px;
     z-index: 2;
   }
 
-  &__img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    border-radius: 4px;
-    z-index: -2;
+  .step-1 {
+    background: url('../img/work-img-1.jpg') 50% / cover $main-color;
+  }
+
+  .step-2 {
+    background: url('../img/work-img-2.jpg') 50% / cover $main-color;
+  }
+
+  .step-3 {
+    background: url('../img/work-img-3.jpg') 50% / cover $main-color;
   }
 
   &__text {
@@ -31,8 +37,8 @@
     align-items: flex-start;
     flex-direction: column;
     justify-content: flex-end;
-    width: 100%;
-    max-width: 300px;
+    // width: 100%;
+    // max-width: 300px;
     height: 100%;
     padding: 0 16px 17px 20px;
     word-wrap: break-word;
@@ -59,5 +65,6 @@
   &__descr {
     width: 100%;
     color: #cccccc;
+    text-align: left;
   }
 }
